--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -29,11 +29,10 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          node --version
-          npm ci --production
+          yarn install
 
       - name: Build Static Website
-        run: npm run build
+        run: yarn build
 
       - name: Copy files to the production website with the AWS CLI
         run: |
